# Pong

./: CMakeLists.txt  Pong.sln  Pong.vcxproj  README.md  main.cpp
src/: ball.cpp  ball.h  main.cpp  paddle.cpp  paddle.h  struc.h
src/entity/ball/: ball.cpp  ball.h
src/entity/paddle/: paddle.cpp  paddle.h
src/entity/pong/: pong.cpp  pong.h
